RH-2009-04-24-0: Bugfix:     Hedeby: 
                             o add_ge_service does not destroy the default
                               execd config for cloud resources
                             o manage_admin_user test disabled (need rewrite)
                             o It is now possible to define a gridengine qmaster
                               host as hedeby master host (needed for cloud testing)  
                 Review:    TB 

CR-2009-04-23-2: Bugfix:     o CR-2009-04-23-1 breaks testsuite startup
                 Belongs To: CR-2009-04-23-1
                 Review:     RD

RD-2009-04-23-0: Enhancem:   - added new throughput test scenario
                             - added fast option for set_complex and made it
                               the default
                 Review:     CR

CR-2009-04-23-1: Bugfix:     o issue 1330 test:
                                test did not make user certificates for 
                                additional testsuite users which caused
                                csp system test problems
                 Review:     RD

CR-2009-04-23-0: Bugfix:     o issue 2743 test:
                                check job accounting values for correct
                                runtime limit. The test might fail because
                                job might be shown by qstat for 90 seconds
                                or longer when execd is restarted.
                 Enhancem.:  o get_qstat_j_info():
                                added raise_error parameter and return value
                 Review:     RD

CR-2009-04-22-0: Bugfix:     set_config_and_propagate():
                             Fixed problem when global host parameters are
                             overwritten by local paramters.
                 Review:     JG

EB-2009-04-22-0: Enhancemn.: changed performance test senarios. qstat is now
                             only executed in one scenario)